# flowstate

./: .gitattributes  .gitignore  README.md  compile.md  demo.md  package-lock.json  package.json
app/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: channels.rs  flows.rs  mod.rs  run.rs
crc/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
crc/app/: build.gradle.kts
crc/gradle/: libs.versions.toml
datasets/: catalog.csv
demo/: README.md  run_demo.sh
docs/: Diagram.canvas  channel-model.md  flow-editor-autosave.md  receipt-claims-policy.md  ui-views.md
eval/: README.md  _fanar_abstain.py  _fanar_abstain2.py  _fanar_arabic_gen.py  _fanar_factsonly.py  _fanar_fullfacts.py  _fanar_metaflows.py  _fanar_sweep.py  _improve_ljp.py  _ljp_factsonly_gpt.py  _mine_hard.py  _mine_hard2.py  aggregate_exceptions.py  build_flows.py  compile_check.mjs  export_loop_demo.mjs  parse_coru.py  parse_ljp.py  parse_rtf.py  policy.py  policy_infer.py  run_deepseek.py  run_fanar.py  run_meta_flows.mjs  run_openai.py  run_through_flowstate.mjs  score.py
eval/data/: classify_fanar_out.json  classify_openai_out.json  classify_out.json  (+38 more)
examples/: README.md
presentation/: DEMO.md  index.html  package-lock.json  package.json  script.md  vite.config.ts
video/: .gitignore  README.md  package-lock.json  package.json  record-app.mjs  remotion.config.ts  tsconfig.json
(+86 files in other folders)
