[package]
name = "flowstate"
version = "0.1.0"
description = "Flowstate desktop app"
authors = ["Elyas Al-Amri"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowstate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Persists window size/position/maximized/fullscreen across launches.
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Lets a running maestro drive this app's windows/DOM over its /ext bridge.
# Relative path to the sibling maestro checkout (../../../maestro from this
# manifest); switch to a git or published dep before this ships independently.
maestro-tauri-connect = { path = "../../../maestro/crates/maestro-tauri-connect" }

